Workchain works. Now using DFT+U+V opt. structures.

--- a/code/iuriis_data_df.ipynb
+++ b/code/iuriis_data_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "(1310, 6)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -257,9 +257,16 @@
        "4  LiMn1.5Ni0.5O4.vcrelax   vcrelax  LiMn1.5Ni0.5O4.vcrelax.out  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jgeiger/projects/bat_uv_ml\n"
+     ]
     }
    ],
    "source": [
@@ -270,6 +277,7 @@
     "iurii_full_data_df.head()\n",
     "\n",
     "# pandas write to csv\n",
+    "print(project_dir)\n",
     "iurii_full_data_df.to_csv(os.path.join(project_dir, 'data', 'iurii_full_data_df.csv'), index=False)\n"
    ]
   },
@@ -337,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +469,7 @@
        "4  LiMn1.5Ni0.5O4.vcrelax   vcrelax  LiMn1.5Ni0.5O4.vcrelax.out  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,16 +488,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 13)"
+       "(5, 6)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abs_path</th>\n",
+       "      <th>calc_in</th>\n",
+       "      <th>abs_path_in</th>\n",
+       "      <th>calc_name</th>\n",
+       "      <th>calc_type</th>\n",
+       "      <th>calc_out</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos/LiMn1.5Ni0.5O4.scf.2.in</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos</td>\n",
+       "      <td>LiMn2O4.scf.2.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos/LiMn2O4.scf.2.in</td>\n",
+       "      <td>LiMn2O4.scf.2</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>LiMn2O4.scf.2.out</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
+       "      <td>LFPO.scf.2.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in</td>\n",
+       "      <td>LFPO.scf.2</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>LFPO.scf.2.out</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
+       "      <td>LFPO.scf.2.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in</td>\n",
+       "      <td>LFPO.scf.2</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>LFPO.scf.2.out</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1275</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS</td>\n",
+       "      <td>LMPO.scf.2.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in</td>\n",
+       "      <td>LMPO.scf.2</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>LMPO.scf.2.out</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                              abs_path  \\\n",
+       "70    /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos   \n",
+       "144                 /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos   \n",
+       "566             /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "931     /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "1275            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
+       "\n",
+       "                      calc_in  \\\n",
+       "70    LiMn1.5Ni0.5O4.scf.2.in   \n",
+       "144          LiMn2O4.scf.2.in   \n",
+       "566             LFPO.scf.2.in   \n",
+       "931             LFPO.scf.2.in   \n",
+       "1275            LMPO.scf.2.in   \n",
+       "\n",
+       "                                                                                                                   abs_path_in  \\\n",
+       "70    /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos/LiMn1.5Ni0.5O4.scf.2.in   \n",
+       "144                        /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos/LiMn2O4.scf.2.in   \n",
+       "566                       /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in   \n",
+       "931               /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in   \n",
+       "1275                      /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in   \n",
+       "\n",
+       "                 calc_name calc_type                  calc_out  \n",
+       "70    LiMn1.5Ni0.5O4.scf.2       scf  LiMn1.5Ni0.5O4.scf.2.out  \n",
+       "144          LiMn2O4.scf.2       scf         LiMn2O4.scf.2.out  \n",
+       "566             LFPO.scf.2       scf            LFPO.scf.2.out  \n",
+       "931             LFPO.scf.2       scf            LFPO.scf.2.out  \n",
+       "1275            LMPO.scf.2       scf            LMPO.scf.2.out  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fully_lithiated_df = iurii_full_data_df.loc[\n",
+    "  # olivine\n",
+    "    (iurii_full_data_df['abs_path_in'].str.contains('LixFePO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in', regex=False))\n",
+    "  | (iurii_full_data_df['abs_path_in'].str.contains('LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in', regex=False))\n",
+    "  | (iurii_full_data_df['abs_path_in'].str.contains('LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in', regex=False))\n",
+    "  # spinel\n",
+    "  | (iurii_full_data_df['abs_path_in'].str.contains('LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos/LiMn1.5Ni0.5O4.scf.2.in', regex=False))\n",
+    "  | (iurii_full_data_df['abs_path_in'].str.contains('LixMn2O4/DFT+U+V/LiMn2O4/5_pdos/LiMn2O4.scf.2.in', regex=False))\n",
+    "]\n",
+    "fully_lithiated_df.shape\n",
+    "fully_lithiated_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 13)"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -523,37 +674,73 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
+       "      <td>LFPO.scf.2.in</td>\n",
+       "      <td>LFPO.scf.2.out</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>Fe4Li4O16P4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
+       "      <td>LFPO.scf.2.in</td>\n",
+       "      <td>LFPO.scf.2.out</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>Fe2Li4Mn2O16P4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS</td>\n",
        "      <td>LMPO.scf.2.in</td>\n",
        "      <td>LMPO.scf.2.out</td>\n",
        "      <td>scf</td>\n",
        "      <td>Li4Mn4O16P4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2.in</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>Li8Mn12Ni4O32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos</td>\n",
+       "      <td>LiMn2O4.scf.2.in</td>\n",
+       "      <td>LiMn2O4.scf.2.out</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>Li8Mn16O32</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                 abs_path  \\\n",
-       "0  /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
+       "                                                                                           abs_path  \\\n",
+       "2            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "3    /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "4            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
+       "0  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos   \n",
+       "1                /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos   \n",
        "\n",
-       "         calc_in        calc_out calc_type chem_formula  \n",
-       "0  LMPO.scf.2.in  LMPO.scf.2.out       scf  Li4Mn4O16P4  "
+       "                   calc_in                  calc_out calc_type    chem_formula  \n",
+       "2            LFPO.scf.2.in            LFPO.scf.2.out       scf     Fe4Li4O16P4  \n",
+       "3            LFPO.scf.2.in            LFPO.scf.2.out       scf  Fe2Li4Mn2O16P4  \n",
+       "4            LMPO.scf.2.in            LMPO.scf.2.out       scf     Li4Mn4O16P4  \n",
+       "0  LiMn1.5Ni0.5O4.scf.2.in  LiMn1.5Ni0.5O4.scf.2.out       scf   Li8Mn12Ni4O32  \n",
+       "1         LiMn2O4.scf.2.in         LiMn2O4.scf.2.out       scf      Li8Mn16O32  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fully_lithiated_df = iurii_full_data_df.loc[\n",
-    "    (iurii_full_data_df['abs_path_in'].str.contains('LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in'))\n",
-    "  | (iurii_full_data_df['abs_path'].str.contains('<full_path>')) # etc\n",
-    "]\n",
-    "\n",
     "fully_lithiated_df = fully_lithiated_df.reset_index(drop=False)\n",
+    "fully_lithiated_df = fully_lithiated_df.sort_values(by='abs_path_in')\n",
     "\n",
     "# ! Replace Mn3u and other special labels with atom types for reading in QE input structure with ASE\n",
     "fully_lithiated_df['clean_input'] = fully_lithiated_df['abs_path_in'].apply(lambda x: Path(x).read_text())\n",
@@ -583,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "env-bat_uv_ml",
    "language": "python",
    "name": "python3"
   },
@@ -627,7 +814,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "563b968e1044a963233ca0d255c24a54b27faba64327a7678a42d7af4cac992e"
+    "hash": "e4b99e4fb7239675e78e08baa36e5541415cefe51d419b717bbcddc9f1c4003f"
    }
   }
  },
