First hackish version of dataframe creation.

--- a/code/iuriis_data_df.ipynb
+++ b/code/iuriis_data_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1310, 6)"
+       "(1314, 6)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -257,7 +257,7 @@
        "4  LiMn1.5Ni0.5O4.vcrelax   vcrelax  LiMn1.5Ni0.5O4.vcrelax.out  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "4  LiMn1.5Ni0.5O4.vcrelax   vcrelax  LiMn1.5Ni0.5O4.vcrelax.out  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "(5, 6)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -541,7 +541,7 @@
        "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144</th>\n",
+       "      <th>145</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos</td>\n",
        "      <td>LiMn2O4.scf.2.in</td>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos/LiMn2O4.scf.2.in</td>\n",
@@ -550,7 +550,7 @@
        "      <td>LiMn2O4.scf.2.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>566</th>\n",
+       "      <th>569</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
        "      <td>LFPO.scf.2.in</td>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in</td>\n",
@@ -559,7 +559,7 @@
        "      <td>LFPO.scf.2.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>931</th>\n",
+       "      <th>935</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
        "      <td>LFPO.scf.2.in</td>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in</td>\n",
@@ -568,7 +568,7 @@
        "      <td>LFPO.scf.2.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1275</th>\n",
+       "      <th>1279</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS</td>\n",
        "      <td>LMPO.scf.2.in</td>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in</td>\n",
@@ -583,34 +583,34 @@
       "text/plain": [
        "                                                                                              abs_path  \\\n",
        "70    /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos   \n",
-       "144                 /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos   \n",
-       "566             /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
-       "931     /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
-       "1275            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
+       "145                 /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos   \n",
+       "569             /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "935     /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "1279            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
        "\n",
        "                      calc_in  \\\n",
        "70    LiMn1.5Ni0.5O4.scf.2.in   \n",
-       "144          LiMn2O4.scf.2.in   \n",
-       "566             LFPO.scf.2.in   \n",
-       "931             LFPO.scf.2.in   \n",
-       "1275            LMPO.scf.2.in   \n",
+       "145          LiMn2O4.scf.2.in   \n",
+       "569             LFPO.scf.2.in   \n",
+       "935             LFPO.scf.2.in   \n",
+       "1279            LMPO.scf.2.in   \n",
        "\n",
        "                                                                                                                   abs_path_in  \\\n",
        "70    /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos/LiMn1.5Ni0.5O4.scf.2.in   \n",
-       "144                        /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos/LiMn2O4.scf.2.in   \n",
-       "566                       /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in   \n",
-       "931               /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in   \n",
-       "1275                      /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in   \n",
+       "145                        /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos/LiMn2O4.scf.2.in   \n",
+       "569                       /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in   \n",
+       "935               /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS/LFPO.scf.2.in   \n",
+       "1279                      /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS/LMPO.scf.2.in   \n",
        "\n",
        "                 calc_name calc_type                  calc_out  \n",
        "70    LiMn1.5Ni0.5O4.scf.2       scf  LiMn1.5Ni0.5O4.scf.2.out  \n",
-       "144          LiMn2O4.scf.2       scf         LiMn2O4.scf.2.out  \n",
-       "566             LFPO.scf.2       scf            LFPO.scf.2.out  \n",
-       "931             LFPO.scf.2       scf            LFPO.scf.2.out  \n",
-       "1275            LMPO.scf.2       scf            LMPO.scf.2.out  "
+       "145          LiMn2O4.scf.2       scf         LiMn2O4.scf.2.out  \n",
+       "569             LFPO.scf.2       scf            LFPO.scf.2.out  \n",
+       "935             LFPO.scf.2       scf            LFPO.scf.2.out  \n",
+       "1279            LMPO.scf.2       scf            LMPO.scf.2.out  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,16 +631,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5, 13)"
+       "(5, 12)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,7 +674,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
        "      <td>LFPO.scf.2.in</td>\n",
        "      <td>LFPO.scf.2.out</td>\n",
@@ -682,7 +682,7 @@
        "      <td>Fe4Li4O16P4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS</td>\n",
        "      <td>LFPO.scf.2.in</td>\n",
        "      <td>LFPO.scf.2.out</td>\n",
@@ -690,7 +690,7 @@
        "      <td>Fe2Li4Mn2O16P4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS</td>\n",
        "      <td>LMPO.scf.2.in</td>\n",
        "      <td>LMPO.scf.2.out</td>\n",
@@ -698,7 +698,7 @@
        "      <td>Li4Mn4O16P4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>3</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.2.in</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
@@ -706,7 +706,7 @@
        "      <td>Li8Mn12Ni4O32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos</td>\n",
        "      <td>LiMn2O4.scf.2.in</td>\n",
        "      <td>LiMn2O4.scf.2.out</td>\n",
@@ -719,28 +719,28 @@
       ],
       "text/plain": [
        "                                                                                           abs_path  \\\n",
-       "2            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
-       "3    /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
-       "4            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
-       "0  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos   \n",
-       "1                /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos   \n",
+       "0            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixFePO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "1    /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMn0.5Fe0.5PO4/Li1.00/DFT_plus_UV/8_PDOS   \n",
+       "2            /home/jgeiger/projects/bat_uv_ml/data/olivine_iurii/LixMnPO4/Li1.00/DFT_plus_UV/9_PDOS   \n",
+       "3  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn1.5Ni0.5O4/DFT+U+V/LiMn1.5Ni0.5O4/8_pdos   \n",
+       "4                /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii/LixMn2O4/DFT+U+V/LiMn2O4/5_pdos   \n",
        "\n",
        "                   calc_in                  calc_out calc_type    chem_formula  \n",
-       "2            LFPO.scf.2.in            LFPO.scf.2.out       scf     Fe4Li4O16P4  \n",
-       "3            LFPO.scf.2.in            LFPO.scf.2.out       scf  Fe2Li4Mn2O16P4  \n",
-       "4            LMPO.scf.2.in            LMPO.scf.2.out       scf     Li4Mn4O16P4  \n",
-       "0  LiMn1.5Ni0.5O4.scf.2.in  LiMn1.5Ni0.5O4.scf.2.out       scf   Li8Mn12Ni4O32  \n",
-       "1         LiMn2O4.scf.2.in         LiMn2O4.scf.2.out       scf      Li8Mn16O32  "
+       "0            LFPO.scf.2.in            LFPO.scf.2.out       scf     Fe4Li4O16P4  \n",
+       "1            LFPO.scf.2.in            LFPO.scf.2.out       scf  Fe2Li4Mn2O16P4  \n",
+       "2            LMPO.scf.2.in            LMPO.scf.2.out       scf     Li4Mn4O16P4  \n",
+       "3  LiMn1.5Ni0.5O4.scf.2.in  LiMn1.5Ni0.5O4.scf.2.out       scf   Li8Mn12Ni4O32  \n",
+       "4         LiMn2O4.scf.2.in         LiMn2O4.scf.2.out       scf      Li8Mn16O32  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fully_lithiated_df = fully_lithiated_df.reset_index(drop=False)\n",
     "fully_lithiated_df = fully_lithiated_df.sort_values(by='abs_path_in')\n",
+    "fully_lithiated_df = fully_lithiated_df.reset_index(drop=True)\n",
     "\n",
     "# ! Replace Mn3u and other special labels with atom types for reading in QE input structure with ASE\n",
     "fully_lithiated_df['clean_input'] = fully_lithiated_df['abs_path_in'].apply(lambda x: Path(x).read_text())\n",
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
