Workchain still crashed.
Now, remove relax part of yaml overrides to completely skip relaxation.

--- a/code/configuration_sampling.ipynb
+++ b/code/configuration_sampling.ipynb
@@ -842,7 +842,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'aiida_quantumespresso.data.hubbard_structure.HubbardStructureData'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "devel_hubbard_data = load_node(3075)\n",
+    "print(type(devel_hubbard_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +870,39 @@
       "\u001b[22m2023-03-03 09:56:07 [605 | REPORT]: [3612|SelfConsistentHubbardWorkChain|setup]: system is treated to be non-magnetic because `nspin == 1` in `scf.pw.parameters` input.\n",
       "2023-03-03 09:56:08 [606 | REPORT]: [3612|SelfConsistentHubbardWorkChain|should_run_relax]: skip_first_relax has been set True; skipping first relaxion...\n",
       "2023-03-03 09:56:09 [607 | REPORT]: [3612|SelfConsistentHubbardWorkChain|run_scf_smearing]: launching PwBaseWorkChain<3614> with smeared occupations\n",
-      "2023-03-03 09:56:11 [608 | REPORT]:   [3614|PwBaseWorkChain|run_process]: launching PwCalculation<3619> iteration #1\u001b[0m\n"
+      "2023-03-03 09:56:11 [608 | REPORT]:   [3614|PwBaseWorkChain|run_process]: launching PwCalculation<3619> iteration #1\u001b[0m\n",
+      "\u001b[22mProperty     Value\n",
+      "-----------  ------------------------------------\n",
+      "type         PwCalculation\n",
+      "state        Waiting\n",
+      "pk           3619\n",
+      "uuid         8a1a4fce-edec-4cda-84e2-0873195ec531\n",
+      "label\n",
+      "description\n",
+      "ctime        2023-03-03 09:56:10.478283+01:00\n",
+      "mtime        2023-03-03 16:28:16.585438+01:00\n",
+      "computer     [3] lumi-small\n",
+      "\n",
+      "Inputs      PK    Type\n",
+      "----------  ----  --------------------\n",
+      "pseudos\n",
+      "    Li      34    UpfData\n",
+      "    Mn      24    UpfData\n",
+      "    O       74    UpfData\n",
+      "    P       28    UpfData\n",
+      "code        2182  InstalledCode\n",
+      "kpoints     3616  KpointsData\n",
+      "parameters  3617  Dict\n",
+      "settings    3618  Dict\n",
+      "structure   3075  HubbardStructureData\n",
+      "\n",
+      "Outputs          PK  Type\n",
+      "-------------  ----  ----------\n",
+      "remote_folder  3645  RemoteData\n",
+      "\n",
+      "Caller          PK  Type\n",
+      "------------  ----  ---------------\n",
+      "iteration_01  3614  PwBaseWorkChain\u001b[0m\n"
      ]
     }
    ],
@@ -860,6 +910,7 @@
     "electron_maxstep_pk = 3612\n",
     "nspin_pk = 3644\n",
     "!verdi process report {electron_maxstep_pk}\n",
+    "!verdi process show 3619\n",
     "# !verdi process report {nspin_pk} # ! Need to supply starting_magnetization for nspin = 2"
    ]
   },
@@ -1174,7 +1225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-bat_uv_ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1193,7 +1244,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e4b99e4fb7239675e78e08baa36e5541415cefe51d419b717bbcddc9f1c4003f"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
