--- a/code/testing-scfhubbard.ipynb
+++ b/code/testing-scfhubbard.ipynb
@@ -844,7 +844,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "env-bat_uv_ml",
    "language": "python",
    "name": "python3"
   },
@@ -862,7 +862,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "563b968e1044a963233ca0d255c24a54b27faba64327a7678a42d7af4cac992e"
+    "hash": "e4b99e4fb7239675e78e08baa36e5541415cefe51d419b717bbcddc9f1c4003f"
    }
   }
  },
