wfc and rhoc were wrongly set in control.
Should work now. Also, tried out config class inheriting from structure
and from cathode, but actually that's not really what we want. Rather,
just use it as container for the set of configurations.

--- a/code/debug-submission.ipynb
+++ b/code/debug-submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "6c6ecdf6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "264f73a2",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
     "    hp_code=hp_code,\n",
     "    hubbard_structure=hubbard_data,\n",
     "    protocol='moderate',\n",
-    "    overrides=Path(os.path.join('yaml_files', 'iurii_vcrelax.yaml')),\n",
+    "    overrides=Path(os.path.join('yaml_files', 'olivine_iurii.yaml')),\n",
     "    spin_type=SpinType.COLLINEAR,\n",
     ")\n",
     "\n",
@@ -79,15 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "5b4a9ff8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4282\n"
+     ]
+    }
+   ],
    "source": [
     "proper_olivine_builder = deepcopy(builder)\n",
-    "# proper_olivine_submit = submit(proper_olivine_builder)\n",
-    "# proper_olivine_submit_pk = proper_olivine_submit.pk\n",
-    "proper_olivine_submit_pk = 4232\n",
+    "proper_olivine_submit = submit(proper_olivine_builder)\n",
+    "proper_olivine_submit_pk = proper_olivine_submit.pk\n",
+    "print(proper_olivine_submit_pk)\n",
+    "# proper_olivine_submit_pk = 4232\n",
     "!verdi process status {$olivine_builder_pk}"
    ]
   },
