Data in form of df attached to class.

--- a/code/configuration_sampling.ipynb
+++ b/code/configuration_sampling.ipynb
@@ -325,12 +325,16 @@
     "    initial_cat = Cathode.from_structure(input_pmg)\n",
     "    configuration_list = initial_cat.get_cation_configurations(**kwargs)\n",
     "\n",
+    "    # parent formula\n",
+    "    print(initial_cat)\n",
+    "    \n",
     "    pmg_list = [cathode.as_ordered_structure() for cathode in configuration_list]\n",
     "    ase_list = [AseAtomsAdaptor.get_atoms(pmg_) for pmg_ in pmg_list]\n",
     "    formula_list = [_.get_chemical_formula() for _ in ase_list]\n",
     "    cell_vector_list = [np.array2string(_.cell.todict()['array']) for _ in ase_list]\n",
-    "    sg_list = [_.space_group(symprec=GLOBAL_SYMPREC) for _ in configuration_list]\n",
-    "    li_list = [_.get_chemical_symbols().count('Li') for _ in ase_list]\n",
+    "    sg_list = [configuration.space_group(symprec=GLOBAL_SYMPREC) for configuration in configuration_list]\n",
+    "    li_list = [ase_structure.get_chemical_symbols().count('Li') for ase_structure in ase_list]\n",
+    "    # lithiation_list = np.array(li_list) / \n",
     "\n",
     "    # ? Still need to apply the multiplicity_dict\n",
     "    li_multiplicity_dict = dict(Counter(li_list))\n",
@@ -348,7 +352,8 @@
     "    return_df['cell_vectors'] = cell_vector_list\n",
     "    return_df['space_group'] = sg_list\n",
     "    return_df['ase_structure'] = ase_list\n",
-    "    return_df['lithiation'] = return_df['li_number'] / (len(kwargs['substitution_sites'])*kwargs['sizes'][0])\n",
+    "    # return_df['lithiation'] = return_df['li_number'] / (len(kwargs['substitution_sites'])*kwargs['sizes'][0])\n",
+    "    # return_df['lithiation'] = return_df['li_number'] / (len(kwargs['substitution_sites'])*kwargs['sizes'][0])\n",
     "\n",
     "    # return_df = return_df.sort_values(by='lithiation', ascending=False)\n",
     "    return_df['li_mpc']= return_df['li_number'].map(li_multiplicity_dict)\n",
