--- a/code/debug-submission.ipynb
+++ b/code/debug-submission.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5b4a9ff8",
    "metadata": {},
    "outputs": [
@@ -87,17 +87,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4282\n"
+      "\u001b[22mSelfConsistentHubbardWorkChain<4282> Waiting [1:while_(should_run_iteration)(4:if_(is_insulator))]\n",
+      "    ├── PwBaseWorkChain<4285> Finished [0] [4:results]\n",
+      "    │   ├── create_kpoints_from_distance<4286> Finished [0]\n",
+      "    │   └── PwCalculation<4290> Finished [0]\n",
+      "    └── PwBaseWorkChain<4297> Waiting [3:while_(should_run_process)(1:run_process)]\n",
+      "        ├── create_kpoints_from_distance<4298> Finished [0]\n",
+      "        └── PwCalculation<4302> Waiting\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "proper_olivine_builder = deepcopy(builder)\n",
-    "proper_olivine_submit = submit(proper_olivine_builder)\n",
-    "proper_olivine_submit_pk = proper_olivine_submit.pk\n",
-    "print(proper_olivine_submit_pk)\n",
+    "# proper_olivine_builder = deepcopy(builder)\n",
+    "# proper_olivine_submit = submit(proper_olivine_builder)\n",
+    "# proper_olivine_submit_pk = proper_olivine_submit.pk\n",
+    "proper_olivine_submit_pk = 4282\n",
     "# proper_olivine_submit_pk = 4232\n",
-    "!verdi process status {$olivine_builder_pk}"
+    "!verdi process status 4282"
    ]
   },
   {
