Yet another test.

--- a/code/notebooks/debug-relabeling.ipynb
+++ b/code/notebooks/debug-relabeling.ipynb
@@ -147,6 +147,16 @@
    "source": [
     "!verdi process report 2234"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88f249b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Test\")"
+   ]
   }
  ],
  "metadata": {
