Last try with notebook output cleaning.

--- a/code/notebooks/debug-relabeling.ipynb
+++ b/code/notebooks/debug-relabeling.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Test\")"
+    "print(\"Test2\")"
    ]
   }
  ],
@@ -174,8 +174,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "pygments_lexer": "ipython3"
   },
   "vscode": {
    "interpreter": {
