Some notebook cleanup.

--- a/code/notebooks/backup.ipynb
+++ b/code/notebooks/backup.ipynb
@@ -56,6 +56,32 @@
     "\n",
     "devel_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pprint(hubbard_data.hubbard_parameters)\n",
+    "# print(hubbard_data.get_quantum_espresso_hubbard_card())\n",
+    "# print(type(hubbard_data))\n",
+    "\n",
+    "# \"\"\"Create a clone of the given structure but with new kinds, based on the new hubbard sites.\n",
+    "\n",
+    "# :param hubbard_structure: ``HubbardStructureData`` instance.\n",
+    "# :param hubbard: the ``hubbard`` output Dict node of a ``HpCalculation``.\n",
+    "# :param magnetization: Dict instance containing the `starting_magnetization` QuantumESPRESSO inputs.\n",
+    "# :return:\n",
+    "# \"\"\"\n",
+    "\n",
+    "# result = structure_relabel_kinds(\n",
+    "#     self.ctx.current_hubbard_structure, workchain.outputs.hubbard, self.ctx.current_magnetic_moments\n",
+    "# )\n",
+    "\n",
+    "# hubbard_structure = last_hpcalculation.outputs.hubbard_structure # hubbard structure of HpCalculation, 1. required argument\n",
+    "# hubbard = last_hpcalculation.outputs.hubbard # hubbard dict of HpCalculation, 2. required argument"
+   ]
   }
  ],
  "metadata": {
@@ -65,8 +91,7 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.8.10"
+   "name": "python"
   },
   "vscode": {
    "interpreter": {
