--- a/code/notebooks/debug-submission.ipynb
+++ b/code/notebooks/debug-submission.ipynb
@@ -35,35 +35,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pw_code = load_code('qe-dev-pw@lumi-small')\n",
-    "hp_code = load_code('qe-dev-hp@lumi-small')\n",
+    "\n",
+    "# ! Currently, for whatever reason, codes duplicated\n",
+    "# pw_code = load_code('qe-dev-pw@lumi-small')\n",
+    "# hp_code = load_code('qe-dev-hp@lumi-small')\n",
+    "pw_code = load_code(2182)\n",
+    "hp_code = load_code(2183)\n",
     "\n",
     "hubbard_data = load_node(3075)\n",
-    "# print(type(hubbard_data))\n",
-    "\n",
-    "# view(hubbard_data.get_ase(), viewer='x3d')\n",
-    "# print(hubbard_data.structure)\n",
-    "# print(hubbard_data.get_quantum_espresso_hubbard_card())\n",
-    "\n",
+    "print(hubbard_data.get_ase())\n",
+    "print(hubbard_data.get_quantum_espresso_hubbard_card())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e656eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "builder = SelfConsistentHubbardWorkChain.get_builder_from_protocol(\n",
     "    pw_code=pw_code,\n",
     "    hp_code=hp_code,\n",
     "    hubbard_structure=hubbard_data,\n",
     "    protocol='moderate',\n",
-    "    overrides=Path(os.path.join('yaml_files', 'olivine_iurii.yaml')),\n",
+    "    overrides=Path(os.path.join('..', 'yaml_files', 'olivine_iurii.yaml')),\n",
     "    spin_type=SpinType.COLLINEAR,\n",
     ")\n",
     "\n",
-    "# scf_dict = builder.scf.pw.parameters.get_dict()\n",
-    "# print(type(builder.scf.pw.parameters))\n",
-    "# relax_dict = builder.relax.base.pw.parameters.get_dict()\n",
-    "# hubbard_dict = builder.hubbard.hp.parameters.get_dict()\n",
+    "scf_dict = builder.scf.pw.parameters.get_dict()\n",
+    "relax_dict = builder.relax.base.pw.parameters.get_dict()\n",
+    "hubbard_dict = builder.hubbard.hp.parameters.get_dict()\n",
     "\n",
-    "# print(json.dumps(scf_dict, sort_keys=False, indent=4))\n",
-    "\n",
-    "# print(builder.scf.pw.parameters.get_dict())\n",
-    "# print(builder.scf)\n",
-    "# submit_pks.append(submit_return.pk)"
+    "print(json.dumps(scf_dict, sort_keys=False, indent=4))\n",
+    "print(json.dumps(relax_dict, sort_keys=False, indent=4))\n",
+    "print(json.dumps(hubbard_dict, sort_keys=False, indent=4))"
    ]
   },
   {
@@ -79,72 +85,6 @@
     "proper_olivine_submit_pk = 4282\n",
     "# proper_olivine_submit_pk = 4232\n",
     "!verdi process status 4282"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16deb11a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Submission with Iurii's relaxation parameters\n",
-    "!verdi process status 4089"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a40fffd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Submission with Iurii's relaxation parameters\n",
-    "!verdi process status 4017"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4959759",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Submission with Iurii's relaxation parameters\n",
-    "!verdi process status 4053"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "241c02f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# First submission with proper parallelization and ferromagnetic ordering\n",
-    "!verdi process status 3714"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88fff08f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Submission without relaxation\n",
-    "!verdi process status 3869"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7671bafc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Submission with long relaxation\n",
-    "!verdi process status 3908"
    ]
   }
  ],
@@ -163,8 +103,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "pygments_lexer": "ipython3"
   },
   "vscode": {
    "interpreter": {
